--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,4 +7,5 @@ repos:
     -   id: trailing-whitespace # removes whitespace
     -   id: end-of-file-fixer   # adds empty stringto end of file
     -   id: check-yaml  # structures yamls
-    -   id: check-added-large-files #
+    -   id: check-added-large-files # stops big commits
+        args: [— maxkb=1000]
