--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,5 +7,12 @@ repos:
     -   id: trailing-whitespace # removes whitespace
     -   id: end-of-file-fixer   # adds empty stringto end of file
     -   id: check-yaml  # structures yamls
+    -   id: check-toml  # structures tomls
+    -   id: check-json  # structures jsons
+    -   id: check-xml  # structures xmls
     -   id: check-added-large-files # stops big commits
         args: [— maxkb=1000]
+    -   id: check-merge-conflict    # stops unresolved conflicts
+    -   id: check-ast   # checks .py files are valid
+    -   id: double-quote-string-fixer   # checks quote marks
+    -   id: debug-statements    # helps debugger statements
