--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,4 @@
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
+
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
@@ -16,3 +15,38 @@ repos:
     -   id: check-ast   # checks .py files are valid
     -   id: double-quote-string-fixer   # checks quote marks
     -   id: debug-statements    # helps debugger statements
+
+-   repo: https://github.com/PyCQA/isort
+    rev: 5.13.2
+    hooks:
+    -   id: isort
+
+-   repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.17
+    hooks:
+    -   id: mdformat
+        additional_dependencies:
+        -   mdformat-gfm
+        -   mdformat-black
+        -   mdformat-config
+        -   mdformat-toc
+-   repo: https://github.com/psf/black
+    rev: 23.12.0
+    hooks:
+    -   id: black
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    # Mypy is a static type checker for Python
+    rev: v1.7.1
+    hooks:
+    -   id: mypy
+        entry: mypy
+-   repo: https://github.com/PyCQA/pylint
+    rev: v3.0.3
+    hooks:
+    -   id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        types: [python]
+        args: ["-rn", # Only display messages
+          "-sn"] # Don't display the score
