--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,18 +1,22 @@
-version: '3'
+version: "3"
+
+env:
+  MAIN_CONTAINER: my-python-app
+  TEST_CONTAINER: my-python-test
 
 tasks:
   build-app:
     cmds:
-      - docker build -t my-python-app --target main .
+      - docker build -t $MAIN_CONTAINER --target main .
 
   run-app:
     cmds:
-      - docker run my-python-app
+      - docker run $MAIN_CONTAINER
 
   build-test:
     cmds:
-      - docker build -t my-python-test --target test .
+      - docker build -t $TEST_CONTAINER --target test .
 
   run-test:
     cmds:
-      - docker run my-python-test
+      - docker run $TEST_CONTAINER
