--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -16,5 +16,7 @@ tasks:
       - docker-compose -f docker-compose.test.yml build
 
   up-test:
+    env:
+      BASE_COMMAND: '{{if eq .USE_DEBUGPY "true"}}/tmp/debugpy --listen 127.0.0.1:5673 --wait-for-client test_main.py{{else}}{{end}}'
     cmds:
       - docker-compose -f docker-compose.test.yml up
