--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
       "host": "localhost",
       "port": 5673,
       "pathMappings": [
-        { "localRoot": "${workspaceFolder}/app", "remoteRoot": "/app" }
+        { "localRoot": "${workspaceFolder}/app",
+          "remoteRoot": "/pythonexercise1/app" }
       ]
     }
   ]
