--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,5 +22,4 @@ tasks:
       - docker-compose -f docker-compose.test.yml up
 
   build-all:
-    cmds:
-      - docker-compose -f docker-compose.yml -f docker-compose.test.yml build
+    deps: [build, build-test]
