--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,4 +11,4 @@ services:
     volumes:
       - ./app:/pythonExercise1/app
       - ./tests:/pythonExercise1/tests
-    command: ${BASE_COMMAND:- pytest}
+    command: ${BASE_COMMAND:- -m pytest}
