--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,14 @@
       "host": "localhost",
       "port": 5673,
       "pathMappings": [
-        { "localRoot": "${workspaceFolder}/app",
-          "remoteRoot": "/pythonexercise1/app" }
+        {
+          "localRoot": "${workspaceFolder}/app",
+          "remoteRoot": "/pythonexercise1/app"
+        },
+        {
+          "localRoot": "${workspaceFolder}/tests",
+          "remoteRoot": "/pythonexercise1/tests"
+        }
       ]
     }
   ]
