places everything in Taskfile

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,50 +1,54 @@
 version: "3"
 
+vars:
+  RUN_DEBUGPY: '/tmp/debugpy --listen 0.0.0.0:5673 --wait-for-client'
+  PYTHON_ENTRYPOINT: 'python'
+  SH_ENTRYPOINT: '/bin/sh'
+
 tasks:
+  # ------------------------------------------------------------------------------------------------
+  # - Help------------------------------------------------------------------------------------------
+  # ------------------------------------------------------------------------------------------------
+
+  default:
+    aliases: ["help"]
+    silent: true
+    desc: "prints help"
+    cmd: task --list
+
   # ------------------------------------------------------------------------------------------------
   # -Build------------------------------------------------------------------------------------------
   # ------------------------------------------------------------------------------------------------
 
   build:
+    desc: builds dev image for main app and testing
+    env:
+      BASE_ENTRYPOINT: '{{.PYTHON_ENTRYPOINT}}'
+      BASE_COMMAND: 'app/main.py'
     cmd: docker-compose -f docker-compose.yml build
-
-  build-test:
-    cmd: docker-compose -f docker-compose.test.yml build
-
-  build-all:
-    deps: [build, build-test]
 
   # ------------------------------------------------------------------------------------------------
   # -Up---------------------------------------------------------------------------------------------
   # ------------------------------------------------------------------------------------------------
 
   up:
+    desc: ups main app (USE_DEBUGPY=true for debug)
     env:
-      BASE_COMMAND: '{{if eq .USE_DEBUGPY "true"}}/tmp/debugpy --listen 0.0.0.0:5673 --wait-for-client app/main.py{{else}}{{end}}'
+      BASE_ENTRYPOINT: '{{.PYTHON_ENTRYPOINT}}'
+      BASE_COMMAND: '{{if eq .USE_DEBUGPY "true"}}{{.RUN_DEBUGPY}} -m app.main{{else}}-m app.main{{end}}'
     cmd: docker-compose -f docker-compose.yml up
 
   up-test:
+    desc: ups coverage and unit-testing (USE_DEBUGPY=true for unit-testing only)
     env:
-      BASE_COMMAND: '{{if eq .USE_DEBUGPY "true"}}/tmp/debugpy --listen 0.0.0.0:5673 --wait-for-client tests/test_main.py{{else}}{{end}}'
-    cmd: docker-compose -f docker-compose.test.yml up
-
-  # ------------------------------------------------------------------------------------------------
-  # -Coverage---------------------------------------------------------------------------------------
-  # ------------------------------------------------------------------------------------------------
-
-  coverage-report:
-    cmds:
-      - coverage run -m pytest
-      - coverage report
-
-  coverage-html:
-    cmds:
-      - coverage run -m pytest
-      - coverage html
+      BASE_ENTRYPOINT: '{{.SH_ENTRYPOINT}}'
+      BASE_COMMAND: '{{if eq .USE_DEBUGPY "true"}}-c "python {{.RUN_DEBUGPY}} -m pytest"{{else}}-c "coverage run -m pytest && coverage report && coverage html"{{end}}'
+    cmd: docker-compose -f docker-compose.yml up
 
   # ------------------------------------------------------------------------------------------------
   # -Pre-Commit-------------------------------------------------------------------------------------
   # ------------------------------------------------------------------------------------------------
 
   pre-commit:
+    desc: runs pre-commit hooks
     cmd: pre-commit run --all-files
