--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,6 +49,7 @@ repos:
         name: pylint
         entry: pylint
         language: system
+        files: '^app/.*\.*'
         types: [python]
         args: ["-rn", # Only display messages
           "-sn"] # Don't display the score
