--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   my-python-app:
+    container_name: my-python-app
     build:
       context: .
       target: dev
@@ -11,4 +12,4 @@ services:
     volumes:
       - ./app:/pythonExercise1/app
       - ./tests:/pythonExercise1/tests
-    command: ${BASE_COMMAND:- app/main.py}
+    command: ${BASE_COMMAND}
