--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,5 +1,8 @@
 version: "3"
 
+vars:
+  RUN_DEBUGPY: '/tmp/debugpy --listen 0.0.0.0:5673 --wait-for-client'
+
 tasks:
   build:
     cmds:
@@ -7,19 +10,15 @@ tasks:
 
   up:
     env:
-      BASE_COMMAND: '{{if eq .USE_DEBUGPY "true"}}/tmp/debugpy --listen 0.0.0.0:5673 --wait-for-client app/main.py{{else}}{{end}}'
-    cmds:
-      - docker-compose -f docker-compose.yml up
-
-  build-test:
-    cmds:
-      - docker-compose -f docker-compose.test.yml build
+      BASE_COMMAND: '{{if eq .USE_DEBUGPY "true"}}{{.RUN_DEBUGPY}} -m app.main{{else}}{{end}}'
+      BASE_ARGS: '{{.CLI_ARGS}}'
+    cmd: docker-compose -f docker-compose.yml up
 
   up-test:
     env:
-      BASE_COMMAND: '{{if eq .USE_DEBUGPY "true"}}/tmp/debugpy --listen 0.0.0.0:5673 --wait-for-client tests/test_main.py{{else}}{{end}}'
-    cmds:
-      - docker-compose -f docker-compose.test.yml up
+      BASE_ENTRYPOINT: '/bin/sh'
+      BASE_COMMAND: '{{if eq .USE_DEBUGPY "true"}}-c "python {{.RUN_DEBUGPY}} -m pytest"{{else}}-c "coverage run -m pytest && coverage report && coverage html"{{end}}'
+    cmd: docker-compose -f docker-compose.yml up
 
   build-all:
     deps: [build, build-test]
